// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar should match the snapshot 1`] = `
<div
  className="NavBar"
>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="nav-link"
    exact={true}
    to="/"
  >
    <div
      className="home-btn"
    >
      Movie Tracker
    </div>
  </NavLink>
  <div
    className="small-btns"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      className="nav-link"
      exact={true}
      to="/favorites"
    >
      <div
        className="favorites-btn"
      >
        Favorites
      </div>
    </NavLink>
    <div
      className="logout-btn"
      onClick={[Function]}
    >
      Logout
    </div>
  </div>
</div>
`;

exports[`NavBar should match the snapshot with no current user 1`] = `
<div
  className="NavBar"
>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="nav-link"
    exact={true}
    to="/"
  >
    <div
      className="home-btn"
    >
      Movie Tracker
    </div>
  </NavLink>
  <div
    className="small-btns"
  >
    <NavLink
      activeClassName="active"
      aria-current="page"
      className="nav-link"
      exact={true}
      to="/login"
    >
      <div
        className="favorites-btn"
      >
        Favorites
      </div>
    </NavLink>
    <div
      className="signup-login-btns"
    >
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="nav-link"
        exact={true}
        to="/login"
      >
        <div
          className="login-btn"
        >
          Login
        </div>
      </NavLink>
      <NavLink
        activeClassName="active"
        aria-current="page"
        className="nav-link"
        exact={true}
        to="/signUp"
      >
        <div
          className="signup-btn"
        >
          Sign up
        </div>
      </NavLink>
    </div>
  </div>
</div>
`;
